<resources>
    <string name="app_name">CheckInSaver</string>
    <string name="action_settings">Settings</string>
    <string name="mapa_de_checkin">Mapa de Check In</string>
    <string name="gestao_checkin">Gestão de Check In</string>
    <string name="lugares_mais_visitados">Lugares Mais Visitados</string>
    <string name="nome_do_local">Nome do local:</string>
    <string name="posicionamento_global">Posicionamento Global</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="local">LOCAL:</string>
    <string name="excluir">Excluir?</string>
    <string name="gestao_de_checkin">Gestão de Check-in</string>
    <string name="chekin">Check-In</string>
    <string name="voltar">Voltar</string>
    <string name="tipos_de_mapa">Tipos de Mapas</string>
    <string name="normal">NORMAL</string>
    <string name="hibrido">HIBRIDO</string>
    <string name="categoria_do_local">Categoria do Local</string>
    <string name="title_activity_mapa_checkin">Map</string>
    <string name="title_activity_gestao_checkin">GestaoCheckinActivity</string>
    <string name="title_activity_lugares_mais_visitados">LugaresMaisVisitadosActivity</string>
    <string name="delete"> APAGAR </string>
    <string name="exclusao"> EXCLUSÃO </string>
    <string name="exclusao_message"> Tem certeza que deseja excluir:\n </string>
    <string name="confirma"> Sim </string>
    <string name="rejeita"> Não </string>

</resources>
