<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="inf221.trabalho.com.checkinsaver.controller.CheckInLocais"
    tools:showIn="@layout/activity_check_in_locais">-->

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="inf221.trabalho.com.checkinsaver.controller.CheckInLocais">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:text="@string/longitude"
            android:textSize="18sp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintBaseline_toBaselineOf="@+id/longitude" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posicionamento_global"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_categoria" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="8dp"
            android:text="@string/nome_do_local"
            android:textColor="@color/Branco"
            android:textSize="18sp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toLeftOf="@+id/guideline3"
            android:layout_marginRight="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0" />

    <AutoCompleteTextView
            android:id="@+id/nome_do_local"
            android:layout_width="0dp"
            android:layout_height="37dp"
        android:ems="10"
            android:inputType="textPersonName"
            android:hint="Nome do Local"
            android:textSize="14sp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="16dp"
            android:text="@string/categoria_do_local"
            android:textSize="18sp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/nome_do_local"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView5" />

        <Spinner
            android:id="@+id/spinner_categoria"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            android:layout_marginRight="0dp"
            app:layout_constraintHorizontal_bias="0.5" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="79dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:onClick="persistirNoBanco"
            android:text="@string/chekin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/latitude"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.479" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="91dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/latitude"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/latitude"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="367dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="181dp" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/longitude"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/longitude"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/longitude"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="64dp"
        android:layout_height="23dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.578" />

</android.support.constraint.ConstraintLayout>
<!--</ScrollView>-->
